--- a/of.web/of.web.csproj
+++ b/of.web/of.web.csproj
@@ -115,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="of.web.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
@@ -129,6 +130,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>nuget pack ..\..\$(ProjectName).csproj -IncludeReferencedProjects -OutputDirectory ..\..\</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
