+ Permite la generación y validación de tokens Jwt, además de los de Referencia.

--- a/test.server.auth/test.server.auth.csproj
+++ b/test.server.auth/test.server.auth.csproj
@@ -116,6 +116,9 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="log\readme.md" />
+    <Content Include="idsrv3test.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
