--- a/of.support.web/of.support.web.csproj
+++ b/of.support.web/of.support.web.csproj
@@ -42,6 +42,7 @@
     <Compile Include="..\of\Properties\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="controllers\LogsController.cs" />
     <Compile Include="controllers\SettingsController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
