+ Se permite ordenamiento en controllers. + MongoDbFileManager tiene un constructor más fácil de usar. + FilesController funcionando. + LogsController funcionando. + Api utilizando SeriLogProvider. + Proyecto vacío mvc para iniciar auth features.

--- a/of.mongodb/of.mongodb.csproj
+++ b/of.mongodb/of.mongodb.csproj
@@ -57,6 +57,7 @@
     </Compile>
     <Compile Include="data\MongoDbContext.cs" />
     <Compile Include="data\MongoDbStore.cs" />
+    <Compile Include="MongoDbDataExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
