--- a/test.server.api/Web.config
+++ b/test.server.api/Web.config
@@ -7,6 +7,11 @@
 	<configSections>
 		<section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection,Microsoft.Practices.Unity.Configuration" />
 	</configSections>
+	<appSettings>
+		<add key="serilog:minimum-level" value="Information" />
+		<add key="serilog:using:RollingFile" value="Serilog.Sinks.RollingFile" />
+		<add key="serilog:write-to:RollingFile.pathFormat" value="e:\temp\log-{Date}.txt" />
+	</appSettings>
 	<connectionStrings>
 		<add name="of.mongodb" connectionString="mongodb://localhost/cinnamon" />
 	</connectionStrings>
@@ -16,12 +21,6 @@
 		<compilation debug="true" targetFramework="4.6.1" />
 		<httpRuntime targetFramework="4.6.1" />
 	</system.web>
-	<system.codedom>
-		<compilers>
-			<compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-			<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-		</compilers>
-	</system.codedom>
 	<system.webServer>
 		<handlers>
 			<remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -36,12 +35,18 @@
 			<typeAlias alias="singleton" type="Microsoft.Practices.Unity.ContainerControlledLifetimeManager, Microsoft.Practices.Unity" />
 			<typeAlias alias="external" type="Microsoft.Practices.Unity.ExternallyControlledLifetimeManager, Microsoft.Practices.Unity" />
 			<typeAlias alias="transient" type="Microsoft.Practices.Unity.TransientLifetimeManager, Microsoft.Practices.Unity" />
-			
-			<typeAlias alias="ISettingStore" type="of.support.configuration.data.ISettingStore, of.support, Version=1.0.0.0, Culture=neutral" />
-			<typeAlias alias="SettingStore" type="of.support.configuration.data.MongoDbSettingStore, of.support.mongodb, Version=1.0.0.0, Culture=neutral" />
 
-			<typeAlias alias="ISettingManager" type="of.support.configuration.ISettingManager, of.support, Version=1.0.0.0, Culture=neutral" />
-			<typeAlias alias="SettingManager" type="of.support.configuration.SettingManager, of.support, Version=1.0.0.0, Culture=neutral" />
+			<typeAlias alias="ISettingStore" type="of.support.configuration.data.ISettingStore, of.support, Version=0.1.1, Culture=neutral" />
+			<typeAlias alias="SettingStore" type="of.support.configuration.data.MongoDbSettingStore, of.support.mongodb, Version=0.1.1, Culture=neutral" />
+
+			<typeAlias alias="ISettingManager" type="of.support.configuration.ISettingManager, of.support, Version=0.1.1, Culture=neutral" />
+			<typeAlias alias="SettingManager" type="of.support.configuration.SettingManager, of.support, Version=0.1.1, Culture=neutral" />
+
+			<typeAlias alias="ILogManager" type="of.support.diagnostics.ILogManager, of.support, Version=0.1.1, Culture=neutral" />
+			<typeAlias alias="LogManager" type="of.support.diagnostics.LogManager, of.support, Version=0.1.1, Culture=neutral" />
+
+			<typeAlias alias="IFileManager" type="of.support.io.IFileManager, of.support, Version=0.1.1, Culture=neutral" />
+			<typeAlias alias="FileManager" type="of.support.io.MongoDbFileManager, of.support.mongodb, Version=0.1.1, Culture=neutral" />
 		</typeAliases>
 		<containers>
 			<container>
@@ -50,6 +55,15 @@
 				</register>
 				<register type="ISettingManager" mapTo="SettingManager">
 					<lifetime type="singleton"></lifetime>
+				</register>
+				<register type="ILogManager" mapTo="LogManager">
+					<lifetime type="singleton"></lifetime>
+				</register>
+				<register type="IFileManager" mapTo="FileManager">
+					<lifetime type="singleton"></lifetime>
+					<constructor>
+						<param name="connectionStringName" value="of.mongodb" />
+					</constructor>
 				</register>
 				<register type="of.data.MongoDbContext, of.mongodb, Version=1.0.0.0, Culture=neutral">
 					<lifetime type="singleton"></lifetime>
