--- a/test.server.api/packages.config
+++ b/test.server.api/packages.config
@@ -14,6 +14,9 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="Serilog" version="2.4.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
