+ Login implicit flow. ! Fix extensions de identity. ! Fix consents.

--- a/test.server.api/Web.config
+++ b/test.server.api/Web.config
@@ -10,7 +10,7 @@
 	<appSettings>
 		<add key="serilog:minimum-level" value="Information" />
 		<add key="serilog:using:RollingFile" value="Serilog.Sinks.RollingFile" />
-		<add key="serilog:write-to:RollingFile.pathFormat" value="e:\temp\log-{Date}.txt" />
+		<add key="serilog:write-to:RollingFile.pathFormat" value="log\log-{Date}.txt" />
 	</appSettings>
 	<connectionStrings>
 		<add name="of.mongodb" connectionString="mongodb://localhost/cinnamon" />
